# thor

./: .gitignore  CMakeLists.txt
cmake/: common.cmake  header.h.in
src/apps/dev-app/: CMakeLists.txt
src/apps/dev-app/source/: main.cpp
src/libs/thor/: CMakeLists.txt  thor.natvis
src/libs/thor/include/thor/: engine.h  thor.h
src/libs/thor/include/thor/core/: allocator.h  array_list.h  assertion.h  core_types.h  diagnostics.h  fixed_array.h  functional.h  hash_id.h  memory.h  shared_ref.h  smart_pointers.h  string.h  string_utils.h  thor_traits.h
src/libs/thor/include/thor/core/hal/: platform_string.h
src/libs/thor/include/thor/core/platform/: platform.h  platform_application.h  platform_string.h  platform_time.h  platform_type_traits.h  windows_platform_api.h  windows_window.h
src/libs/thor/source/: engine.cpp  thor.cpp
src/libs/thor/source/core/: allocator.cpp  memory.cpp  string_utils.cpp
src/libs/thor/source/core/hal/: platform_string.cpp  platform_time.cpp
src/libs/thor/source/core/platform/: platform_application.cpp  platform_string.cpp  platform_time.cpp  windows_window.cpp
src/tests/: CMakeLists.txt  tests_array_list.cpp  tests_functors.cpp  tests_hash_id.cpp  tests_shared_refs.cpp  tests_strings.cpp  tests_unique_ptr.cpp
